Updated build to copy third party libs to build

--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "start": "npm-run-all --parallel watch browser-sync",
     "modernizr": "modernizr -c modernizr-config.json -d build/ -u",
     "browser-sync": "browser-sync start --server --logLevel info --files 'build/**/*' '**/*.html' --port 3030",
+    "copy:three": "cp ./node_modules/three/build/three.js ./build/",
+    "copy:webvr-polyfill": "cp ./node_modules/webvr-polyfill/build/webvr-polyfill.js ./build/",
+    "copy:webvr-manager": "cp node_modules/webvr-boilerplate/build/webvr-manager.js ./build/",
     "build:css-prod": "stylus --include-css -c -u autoprefixer-stylus src/css/main.styl -o build/bundle.min.css",
     "build:js-prod": "browserify src/js/main.js -t babelify -g uglifyify | uglifyjs -c > build/bundle.min.js",
+    "prebuild": "npm run copy:three && npm run copy:webvr-polyfill && npm run copy:webvr-manager",
+    "prewatch": "npm run copy:three && npm run copy:webvr-polyfill && npm run copy:webvr-manager",
     "build": "npm run build:css-prod -s && npm run build:js-prod -s",
     "watch:js": "watchify src/js/main.js -d -t babelify -o build/bundle.min.js",
     "watch:css": "stylus -w --include-css -m -u autoprefixer-stylus src/css/main.styl -o build/bundle.min.css",
